--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         default: 'arcade',
         arcade: {
           gravity: { y: 500 },
-          debug: true
+          debug: false
         }
       },
       scene: Main
